K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: taskmanager.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 3000
